Add line studio portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                             class="link-nav">Studio</a>
                     </li>
                     <li><a href="./portfolio.html" target="_self" rel="noopener noreferrer nofollow"
-                            class="link-nav">Portfolio</a></li>
+                            class="link-nav active">Portfolio</a></li>
                     <li><a href="" target="_self" rel="noopener noreferrer nofollow" class="link-nav">Contacts</a></li>
                 </ul>
             </nav>
