--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="./index.html" class="logo"><span class="accent-color">Web</span>Studio</a>
                 <ul class="site-nav">
                     <li class="site-nav-item"><a href="./index.html" target="_self" rel="noopener noreferrer nofollow"
-                            class="link-nav">Studio</a>
+                            class="link-nav active">Studio</a>
                     </li>
                     <li class="site-nav-item"><a href="./portfolio.html" target="_self"
                             rel="noopener noreferrer nofollow" class="link-nav">Portfolio</a></li>
