Add hover/focus and animation cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,63 +57,108 @@
 
                 <ul class="cards-list">
                     <li class="card-item">
-                        <img src="./images/bank-app-1.jpg" alt="Screen of bank App" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/bank-app-1.jpg" alt="Screen of bank App" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Banking App Interface Concept</h2>
                             <p class="card-text">App</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/scan-qr-1.jpg" alt="Scanning QR code" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/scan-qr-1.jpg" alt="Scanning QR code" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Cashless Payment</h2>
                             <p class="card-text">Marketing</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/mуditation-app-1.jpg" alt="Laptop and cellphone" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/mуditation-app-1.jpg" alt="Laptop and cellphone" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Meditaion App</h2>
                             <p class="card-text">App</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/taxi-service-1.jpg" alt="Inside a car hands on rudder" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/taxi-service-1.jpg" alt="Inside a car hands on rudder" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Taxi Service</h2>
                             <p class="card-text">Marketing</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/screen-phone-1.jpg" alt="Screen phone wallpapers" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/screen-phone-1.jpg" alt="Screen phone wallpapers" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Screen Illustrations</h2>
                             <p class="card-text">Design</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/online-courses-1.jpg" alt="Smilling woman with phone" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/online-courses-1.jpg" alt="Smilling woman with phone" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Online Courses</h2>
                             <p class="card-text">Marketing</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/instagram-1.jpg" alt="Instagram wallpapers with people" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/instagram-1.jpg" alt="Instagram wallpapers with people" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Instagram Stories Concept</h2>
                             <p class="card-text">Design</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/organic-food-1.jpg" alt="Woman carries vegetables" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/organic-food-1.jpg" alt="Woman carries vegetables" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Organic Food</h2>
                             <p class="card-text">Web Site</p>
                         </div>
                     </li>
                     <li class="card-item">
-                        <img src="./images/coffee-1.jpg" alt="Puring milk to coffee" width="360">
+                        <div class="card-overlay">
+                            <img src="./images/coffee-1.jpg" alt="Puring milk to coffee" width="360">
+                            <p class="card-overlay-info">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="card-item-info">
                             <h2 class="card-title">Fresh Coffee</h2>
                             <p class="card-text">Web Site</p>
