--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions <br> for Your Business</h1>
-                <button type="button" class="hero-btn">Order Service</button>
+                <button type="button" class="hero-btn" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -307,8 +307,6 @@
             </div>
 
         </section>
-
-
     </main>
 
     <footer class=" footer">
@@ -358,6 +356,18 @@
         </div>
 
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-button" data-modal-close>
+                <svg class="btn-close" width="8" height="8">
+                    <use href="./images/symbol-defs-1.svg#icon-close-black-18dp"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
